log.txt
main.c: In function ‘main’:
main.c:55:19: error: expected ‘;’ before ‘ply’
   55 |     ply->sym = 'P'
      |                   ^
      |                   ;
   56 |     ply->x = 1;
      |     ~~~            
movement.c: In function ‘min_idx’:
movement.c:15:19: error: subscripted value is neither array nor pointer nor vector
   15 |     int min = dist[idx];
      |                   ^
movement.c:17:16: error: subscripted value is neither array nor pointer nor vector
   17 |         if(dist[i] < min){
      |                ^
movement.c:18:23: error: subscripted value is neither array nor pointer nor vector
   18 |             min = dist[i];
      |                       ^
movement.c: In function ‘greedy_move’:
movement.c:71:21: error: passing argument 1 of ‘min_idx’ makes integer from pointer without a cast [-Wint-conversion]
   71 |     int j = min_idx(dist, 4);
      |                     ^~~~
      |                     |
      |                     int *
movement.c:71:21: note: possible fix: dereference with ‘*’
   71 |     int j = min_idx(dist, 4);
      |                     ^~~~
      |                     *
movement.c:13:17: note: expected ‘int’ but argument is of type ‘int *’
   13 | int min_idx(int dist, int size){
      |             ~~~~^~~~
ghosts.c:50:5: error: conflicting types for ‘scatter’; have ‘int(char (*)[55], me **, int)’ {aka ‘int(char (*)[55], struct movingEntity **, int)’}
   50 | int scatter(char grid[HEIGHT][WIDTH], me* ghosts[], int count){
      |     ^~~~~~~
In file included from ghosts.c:1:
ghosts.h:8:5: note: previous declaration of ‘scatter’ with type ‘int(me **, int)’ {aka ‘int(struct movingEntity **, int)’}
    8 | int scatter(me* ghosts[], int count);
      |     ^~~~~~~
